# rust_graphql_server_demo

./: .env  Cargo.toml  LICENSE  README.markdown  db_create.sh
migrations/: 20220118212821_posts.down.sql  20220118212821_posts.up.sql
src/: db.rs  main.rs  schema.rs
src/api/: mod.rs  mutation.rs  post.rs  query.rs  user.rs
