[package]
name = "graphql_server_demo"
version = "0.1.0"
authors = ["Jesse Hallett <jesse@sitr.us>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0"
async-graphql-warp = "3.0"
color-eyre = "0.6.0"
dotenv = "0.15.0"
http = "0.2"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
warp = "0.3"
